initial attempt at forms without models that update static page information. Not working

--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -20,7 +20,10 @@ Pin: <%= @admin.pin %>
 <hr>
 
 <h3> Website Management </h3>
-<p> Homepage </p>
+<p> Edit Homepage </p>
+<button type="button">Edit Header Image (add ajax)</button>
+<button type="button">Edit Content (add ajax)</button>
+<p> Edit Our Story Page </p>
 <button type="button">Edit Header Image (add ajax)</button>
 <button type="button">Edit Content (add ajax)</button>
 <p> Edit Menu Page </p>
