--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,20 +1,5 @@
 <h1> Our Story </h1>
 
 <div class="about_content">
-<p>
-	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla euismod id nisl in elementum. Phasellus molestie ultricies erat at scelerisque. Nam non tellus cursus neque lacinia lacinia. Mauris at nisl mollis nisl fringilla pharetra. Nunc viverra eros quis ipsum facilisis, ut venenatis lorem efficitur. Donec lobortis dolor a pulvinar pharetra. Suspendisse bibendum vehicula mi sit amet efficitur.
-	<br>
-	<br>
-	Nulla facilisi. Praesent efficitur congue mauris sed bibendum. Sed nec tempus ante, id tempor nisl. Proin consectetur mi eget risus suscipit, ut vehicula ante aliquet. Quisque nec ornare magna, non fringilla lorem. Praesent blandit nibh vitae justo placerat congue. Vivamus mattis nunc ante, sed mollis magna efficitur a. Morbi quam ante, dictum ac consequat ac, laoreet nec metus. Duis mauris nibh, fermentum a quam ac, condimentum porttitor orci.
-	<br>
-	<br>
-	Praesent fringilla blandit purus, et vestibulum justo pulvinar sit amet. Vivamus ac sollicitudin elit. Proin sapien quam, ornare et nisl vitae, placerat auctor lorem. Proin fringilla maximus dui, quis pulvinar sapien placerat eget. Cras et eros elit. Nullam non lorem a nunc sagittis lobortis. Aliquam dapibus vehicula vulputate. Donec ac est sed odio pretium condimentum. Suspendisse potenti.
-	<br>
-	<br>
-	Integer sed nunc risus. Praesent convallis lectus egestas nisi efficitur tristique. Maecenas arcu urna, tincidunt cursus est ac, pulvinar finibus leo. Aliquam et tristique nisi. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam a mauris non urna vestibulum ultrices. Cras in ornare tortor. Curabitur quis metus dictum, bibendum libero at, rutrum felis. Phasellus nisl purus, dapibus ac vulputate eget, pretium sit amet odio. In hac habitasse platea dictumst. Sed porttitor nulla mauris, nec facilisis enim blandit vitae. Nulla facilisi.
-	<br>
-	<br>
-	Aenean sollicitudin lectus in diam faucibus malesuada. Curabitur vitae interdum nisi. Ut mattis nunc nec nulla tempor, quis pellentesque leo vehicula. Etiam condimentum aliquet mollis. Vivamus pulvinar urna mauris, non interdum magna lobortis a. Quisque viverra elit at maximus dictum. Ut at tincidunt ligula, a maximus magna. In feugiat auctor dolor, non efficitur nisi consectetur sit amet. Phasellus nec ante libero. Fusce vel arcu gravida lacus facilisis ultricies ut vitae erat. Nunc mauris nulla, euismod id magna et, bibendum scelerisque felis. Pellentesque sagittis mollis tellus, sit amet ultrices nibh rhoncus nec.
-
-</p>
+<%= p_one %>
 </div>
