continuing blog functionality

--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -6,6 +6,6 @@
  <% end %>
 
  <h4> current admin (remove) </h4> 
-<% if current_admin != nil %>
+<% if @current_admin != nil %>
 <%= @current_admin.username %>
 <% end %>
