--- a/app/views/pages/_editaboutform.html.erb
+++ b/app/views/pages/_editaboutform.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag, :url => {:controller => "pages", :action => "edit_about"} do %>
+<%= form_tag :action => "edit_about" do %>
 <%= label_tag 'Header' %>
 <%= text_field_tag "header" %>
 <br>
