added list as blog page to pages controller

--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -15,10 +15,10 @@ Pin: <%= @admin.pin %>
 <%= tag :br %>
 <%= button_to "Edit Blog Posts", '/pages/list', :method => "get" %>
 <%= tag :br %>
-<%= button_to "Edit Blog Posts", '/pages/list', :method => "get" %>
+NOT WORKING <%= button_to "Edit Blog Posts", '/pages/list', :method => "get" %>
 <hr>
 
-<h3> Website Management </h3>
+<h3> NOT WORKING Website Management </h3>
 <p> Edit Homepage </p>
 <button type="button">Edit Header Image (add ajax)</button>
 <button type="button">Edit Content (add ajax)</button>
