--- a/app/views/webpages/show.html.erb
+++ b/app/views/webpages/show.html.erb
@@ -10,4 +10,19 @@
   <%= @webpage.type %>
 </p>
 
+<p>
+  <strong>Header:</strong>
+  <%= @webpage_header.text %>
+</p>
+
+<p>
+  <strong>Header:</strong>
+  <%= @webpage.header.text %>
+</p>
+
+<p>
+  <strong>Body:</strong>
+  <%= @webpage.body.subheader %>
+  <%= @webpage.body.paragraph %>
+</p>
 
