--- a/app/views/webpages/show.html.erb
+++ b/app/views/webpages/show.html.erb
@@ -12,17 +12,13 @@
 
 <p>
   <strong>Header:</strong>
-  <%= @webpage_header.text %>
+  <%= @webpage.headers.first.text %>
 </p>
 
 <p>
-  <strong>Header:</strong>
-  <%= @webpage.header.text %>
+  <strong>Body:</strong> <br>
+  Subheader: <%= @webpage.bodies.first.subheader%> <br>
+  Paragraph: <%= @webpage.bodies.first.paragraph%>
 </p>
 
-<p>
-  <strong>Body:</strong>
-  <%= @webpage.body.subheader %>
-  <%= @webpage.body.paragraph %>
-</p>
 
