--- a/app/views/bodies/_form.html.erb
+++ b/app/views/bodies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:webpage, @body] do |f| %>
+<%= form_for [@webpage, @body] do |f| %>
   <div class="field">
     <%= f.label :subheader %><br>
     <%= f.text_field :subheader %>
