--- a/app/views/headers/_form.html.erb
+++ b/app/views/headers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:webpage, @header] do |f| %>
+<%= form_for [@webpage, @header] do |f| %>
   <div class="field">
     <%= f.label :text %><br>
     <%= f.text_field :text %>
