--- a/app/views/image_pages/new.html.erb
+++ b/app/views/image_pages/new.html.erb
@@ -1,4 +1,5 @@
-<h1>Add Images to Your Webpage</h1>
+<h1> Choose an Image From Your Database to Add to Your Webpage </h1>
 
 <%= render 'form' %>
+
 
