--- a/app/views/webpages/show.html.erb
+++ b/app/views/webpages/show.html.erb
@@ -1,24 +1,30 @@
-<p id="notice"><%= notice %></p>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title><%= @webpage.name %></title>
+	</head>
+		<body>
+			<div class="webpage_header">
+				<%= @webpage.headers.first.text %>
+			</div>
+			
+			<div class="webpage_content">
+				<div class="webpage_subheader"><%= @webpage.bodies.first.subheader %></div>
+				<div class="webpage_paragraph"><%= @webpage.bodies.first.paragraph %></div>
+			</div>
 
-<p>
-  <strong>Name:</strong>
-  <%= @webpage.name %>
-</p>
+			<div class="webpage_images">
+				<% @webpage.images.each do |image| %>
+					<div class="image"><%= image_tag image.img.url(:medium) %></div> <br><br>
+				<% end %>
+			</div>
 
-<p>
-  <strong>Type:</strong>
-  <%= @webpage.type %>
-</p>
+		</body>
 
-<p>
-  <strong>Header:</strong>
-  <%= @webpage.headers.first.text %>
-</p>
+</html>
 
-<p>
-  <strong>Body:</strong> <br>
-  Subheader: <%= @webpage.bodies.first.subheader%> <br>
-  Paragraph: <%= @webpage.bodies.first.paragraph%>
-</p>
+
+
+
 
 
