--- a/app/views/admins/new.html.erb
+++ b/app/views/admins/new.html.erb
@@ -1,3 +1,6 @@
+<body id="admin_landing">
+<div class="content_box">
+<h1> Your Image Database </h1>
 <h1> Create a New Admin </h1>
 
 <p> 
@@ -13,3 +16,5 @@
 <%= f.text_field :pin %>
 <%= f.submit %>
 <% end %>
+</div>
+</div>
