--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -2,6 +2,7 @@
 <div class="content_box">
 <h1> Welcome to Your Admin Portal </h1>
 <hr>
+<%= image_tag("Function.png", class: "nav_logo")%>
 <p> lorem random lorem lorem random lorem lorem random lorem lorem random lorem lorem random lorem </p>
 <p> lorem random lorem lorem random lorem lorem random lorem lorem random lorem lorem random lorem </p>
 <p> lorem random lorem lorem random lorem lorem random lorem lorem random lorem lorem random lorem </p>
