--- a/app/views/image_pages/new.html.erb
+++ b/app/views/image_pages/new.html.erb
@@ -1,5 +1,9 @@
-<h1> Choose an Image From Your Database to Add to Your Webpage </h1>
+<body id="admin_landing">
+<div class="content_box">
+<h2> Choose An Image From Your Database </h2>
 
 <%= render 'form' %>
+</div>
+</div>
 
 
