--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -1,4 +1,9 @@
+<body id="admin_landing">
+<div class="content_box">
+<h1> Your Image Database </h1>
 <h1>Editing Image</h1>
 
 <%= render 'form' %>
+</div>
+</div>
 
