--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,5 +1,9 @@
+<body id="admin_landing">
+<div class="content_box">
 <h1> Your Uploaded Images </h1>
 <% @images.each do |image| %>
 <%= image.name %><br>
 <%= image_tag image.img.url(:medium) %> <br><br>
 <% end %>
+</div>
+</div>
