--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,8 @@
+<body id="admin_landing">
+<div class="content_box">
+<h1> Your Image Database </h1>
 <h1> Edit Blog Post </h1>
 
 <%= render 'form' %>
+</div>
+</div>
