--- a/app/views/image_pages/_form.html.erb
+++ b/app/views/image_pages/_form.html.erb
@@ -1,11 +1,11 @@
-<%= form_for [:webpage, @image_page] do |f| %>
+<%= form_for [@webpage, @image_page] do |f| %>
   <div class="field">
     <%= f.hidden_field(:webpage_id, :value => @webpage.id) %>
   </div>
   <div class="field">
-    <%= f.collection_select :image_id, Image.all, :id, :name %>
+    <%= f.collection_select :image_id, Image.all, :id, :name %> <br> <br>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Add Image" %>
   </div>
 <% end %>
