--- a/app/views/layouts/admin_layout.html.erb
+++ b/app/views/layouts/admin_layout.html.erb
@@ -13,19 +13,20 @@
 		Pin: <%= @current_admin.pin %>
 		<%= tag :br %>
 	</div>
-		<nav>
-	      <ul>
-	        <%= link_to image_tag("Function.png", class: "nav_logo"), admin_path(@current_admin)%>
+		<nav class="admin_nav">
+	      <ul class="admin_ul">
+	        <%= link_to image_tag("dashboard_icon.png", class: "dash_icon"), admin_path(@current_admin) %>
 	        <h2> Admin Dashboard </h2>
+	        <hr>
 	        <h3> Webpage Management </h3>
-	          <li><%= link_to "Add a New Webpage", new_webpage_path %></li>
-	          <li><%= link_to "Edit Current Webpages", webpages_path %></li>
-	          <li><%= link_to "Add a New Image to Database", new_image_path %></li>
-	          <li><%= link_to "Image Database", images_path %></li>
+	          <li class="admin_li"><%= link_to "Add a New Webpage", new_webpage_path %></li>
+	          <li class="admin_li"><%= link_to "Edit Current Webpages", webpages_path %></li>
+	          <li class="admin_li"><%= link_to "Add a New Image to Database", new_image_path %></li>
+	          <li class="admin_li"><%= link_to "Image Database", images_path %></li>
 	          <hr>
 	        <h3> Blog Management </h3>
-	          <li><%= link_to "Create a New Blog Post", new_post_path %></li>
-	          <li><%= link_to "Edit Blog Posts", '/pages/list' %></li>
+	          <li class="admin_li"><%= link_to "Create a New Blog Post", new_post_path %></li>
+	          <li class="admin_li"><%= link_to "Edit Blog Posts", '/pages/list' %></li>
 	          <hr>
 	        <h3> Admin Settings </h3>
 	      </ul>
