--- a/app/views/pages/list.html.erb
+++ b/app/views/pages/list.html.erb
@@ -1,14 +1,18 @@
+<body id="admin_landing">
+<div class="content_box">
 <h1> Edit/Delete Blog Posts </h1>
 
  <% @posts.each do |post| %>
-	<%= post.title %>
+	<strong> Title </strong>: <%= post.title %>
 	<br>
-	<%= post.body %>
+	<strong> Body </strong>: <%= post.body %>
 	<br>
-	<%= post.category %>
+	<strong> Category </strong>: <%= post.category %>
 	<br>
-	<%= link_to 'Edit', edit_post_path(post) %>
+	<%= link_to 'Edit', edit_post_path(post) %> |
     <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
 	<br>
 	<hr>
  <% end %>
+</div>
+</div>
