--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,7 @@
-<h1> new blog post </h1>
+<body id="admin_landing">
+<div class="content_box">
+<h1> Create a New Blog Post </h1>
 
 <%= render 'form' %>
+</div>
+</div>
