--- a/app/views/admins/edit.html.erb
+++ b/app/views/admins/edit.html.erb
@@ -1,6 +1,6 @@
 <body id="admin_landing">
 <div class="content_box">
-<h1> Create a New Admin </h1>
+<h1> Edit Your Admin Account </h1>
 
 <p> 
 	Please be aware that all Admins have the abilities to make changes to the website, create blog posts, delete blog posts, etc. 
