--- a/app/views/webpages/_contentpage.html.erb
+++ b/app/views/webpages/_contentpage.html.erb
@@ -4,22 +4,33 @@
 		<title><%= @webpage.name %></title>
 	</head>
 		<body>
-			<div class="webpage_header">
-				<%= @webpage.headers.first.text %>
-			</div>
+			<header class="other_header">
+				<nav class="other_nav">
+					<ul class="navbar">
+						<li class="other_li"><a href="">Home</a></li>
+						<li class="other_li"><a href="">About</a></li>
+						<li class="other_li"><a href="">Menu</a></li>
+						<li class="other_li"><a href="">Contact</a></li>
+					</ul>
+				</nav>
+				<%= image_tag("Function.png", class: "other_logo") %>
+			</header>
+				<div class="webpage_header">
+					<%= @webpage.headers.first.text %>
+				</div>
 
-			THIS IS A CONTENTPAGE
-			
-			<div class="webpage_content">
-				<div class="webpage_subheader"><%= @webpage.bodies.first.subheader %></div>
-				<div class="webpage_paragraph"><%= @webpage.bodies.first.paragraph %></div>
-			</div>
+				THIS IS A CONTENTPAGE
+				
+				<div class="webpage_content">
+					<div class="webpage_subheader"><%= @webpage.bodies.first.subheader %></div>
+					<div class="webpage_paragraph"><%= @webpage.bodies.first.paragraph %></div>
+				</div>
 
-			<div class="webpage_images">
-				<% @webpage.images.each do |image| %>
-					<div class="image"><%= image_tag image.img.url(:medium) %></div> <br><br>
-				<% end %>
-			</div>
+				<div class="webpage_images">
+					<% @webpage.images.each do |image| %>
+						<div class="image"><%= image_tag image.img.url(:medium) %></div> <br><br>
+					<% end %>
+				</div>
 		</body>
 
 </html>
