--- a/app/views/webpages/index.html.erb
+++ b/app/views/webpages/index.html.erb
@@ -5,7 +5,9 @@
 <%= web.name %> | 
 <%= web.type %> |
 <%= link_to 'Edit', edit_webpage_path(web) %> |
-<%= link_to 'View', webpage_path(web) %> <br><br>
+<%= link_to 'View', webpage_path(web) %> |
+<%= link_to 'Delete', webpage_path(web), method: :delete, data: {confirm: 'Are you sure?'} %> 
+<br><br>
  <% end %>
 </div>
 </div>
