--- a/app/views/webpages/_picturepage.html.erb
+++ b/app/views/webpages/_picturepage.html.erb
@@ -4,13 +4,12 @@
 		<title><%= @webpage.name %></title>
 	</head>
 		<body>
-			<header class="other_header">
+			<header class="other_header" style="background-image:url(<%= @webpage.header_image.head_img.url %>)">
 				<nav class="other_nav">
 					<ul class="navbar">
-						<li class="other_li"><a href="">Home</a></li>
-						<li class="other_li"><a href="">About</a></li>
-						<li class="other_li"><a href="">Menu</a></li>
-						<li class="other_li"><a href="">Contact</a></li>
+						<% @webpages.each do |web| %>
+						<li class="other_li"><%= link_to "#{web.name}", "/webpages/#{web.id}" %></li>
+						<% end %>
 					</ul>
 				</nav>
 				<%= image_tag("Function.png", class: "other_logo") %>
