--- a/app/views/header_images/edit.html.erb
+++ b/app/views/header_images/edit.html.erb
@@ -3,5 +3,8 @@
 <h1>Edit Image Header</h1>
 
 <%= render 'form' %>
+
+<h3> current header image </h3>
+<%= image_tag @webpage.header_image.head_img.url %>
 </div>
 </div>
