--- a/app/views/layouts/admin_layout.html.erb
+++ b/app/views/layouts/admin_layout.html.erb
@@ -29,6 +29,7 @@
 	          <li class="admin_li"><%= link_to "Edit Blog Posts", '/pages/list' %></li>
 	          <hr>
 	        <h3> Admin Settings </h3>
+	        <li class="admin_li"><%= link_to "Edit Admin Account", edit_admin_path(@current_admin) %></li>
 	      </ul>
 	    </nav>
 
