--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,8 +3,7 @@
 <%= f.text_field :title %>
 <br>
 <br>
-<%= f.label :body %>
-<%= f.text_area :body %>
+<%= f.text_area(:body, cols: 40, rows: 40)%>
 <br>
 <br>
 <%= f.label :category %>
