--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,34 @@
-<h1> Function Coffee Labs Blog! </h1>
-<hr>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title><%= "FCL Blog" %></title>
+	</head>
+		<body class="blog_body">
+			<header class="blog_header">
+				<nav class="blog_nav">
+					<ul class="blog_navbar">
+						<% @webpages.each do |web| %>
+						<li class="blog_li"><%= link_to "#{web.name}", "/webpages/#{web.id}" %></li>
+						<% end %>
+						<li class="blog_li"><%= link_to "FCL Blog", posts_path %></li>
+					</ul>
+				</nav>
+			</header>
+				<div class="blog_box">
+				<div class="recent_post">
+					<div class="post_title"><%= @posts.last.title %> </div> <br> <br>
+					Category: <%= @posts.last.category %>
+					<%= simple_format @posts.last.body %> <br>
+				</div>
+				<h3 class="previous_title"> All Blog Posts </h3>
+				 <% @posts.each do |post| %>
+						<div class="title_link"><%= link_to "#{post.title}", post_path(post) %></div>
+						<br>
+						Category: <%= post.category %>
+						<br>
+						<hr>
+					 <% end %>
+				</div>
+		</body>
 
- <% @posts.each do |post| %>
-	<%= post.title %>
-	<br>
-	<%= post.body %>
-	<br>
-	Category: <%= post.category %>
-	<br>
-	<hr>
- <% end %>
+</html>
