--- a/app/views/webpages/_contentpage.html.erb
+++ b/app/views/webpages/_contentpage.html.erb
@@ -3,7 +3,7 @@
 	<head>
 		<title><%= @webpage.name %></title>
 	</head>
-		<body>
+		<body class="contentpage_body">
 			<header class="other_header" style="background-image:url(<%= @webpage.header_image.head_img.url %>)">
 				<nav class="other_nav">
 					<ul class="navbar">
@@ -18,17 +18,15 @@
 				<div class="webpage_header">
 					<%= @webpage.headers.first.text %>
 				</div>
-
-				THIS IS A CONTENTPAGE
 				
 				<div class="webpage_content">
 					<div class="webpage_subheader"><%= @webpage.bodies.first.subheader %></div>
-					<div class="webpage_paragraph"><%= @webpage.bodies.first.paragraph %></div>
+					<div class="webpage_paragraph"><%= simple_format @webpage.bodies.first.paragraph %></div>
 				</div>
 
 				<div class="webpage_images">
 					<% @webpage.images.each do |image| %>
-						<div class="image"><%= image_tag image.img.url(:medium) %></div> <br><br>
+						<%= image_tag image.img.url(:medium), :class => "image" %> <br><br>
 					<% end %>
 				</div>
 		</body>
